--- a/package.json
+++ b/package.json
@@ -2,8 +2,25 @@
   "name": "vue-barcode-reader",
   "version": "1.0.3",
   "description": "Vue barcodes and QR codes scanner",
-  "main": "src/index.js",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vuebarcodereader.cjs",
+  "browser": "dist/vue3-simple-typeahead.umd.js",
+  "module": "./dist/vuebarcodereader.js",
+  "exports": {
+    ".": {
+      "import": "./dist/vuebarcodereader.js",
+      "require": "./dist/vuebarcodereader.umd.cjs"
+    },
+    "./style.css": "./dist/style.css"
+  },
   "scripts": {
+    "build": "vite build",
+    "build:ssr": "cross-env NODE_ENV=production rollup --config rollup.config.js --format cjs",
+    "build:es": "cross-env NODE_ENV=production rollup --config rollup.config.js --format es",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config rollup.config.js --format iife",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +40,18 @@
   },
   "homepage": "https://github.com/olefirenko/vue-barcode-reader#readme",
   "dependencies": {
-    "@zxing/library": "^0.19.1"
+    "@zxing/library": "^0.19.1",
+    "cross-env": "^7.0.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "rollup": "^2.79.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-vue": "^6.0.0",
+    "vite": "^5.0.10"
   }
 }
